feat(snowpack): switch to @strictly-lang/snowpack plugin

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@strictly-lang/compiler": "^1.1.8"
   },
   "devDependencies": {
+    "@strictly-lang/snowpack-plugin": "^1.0.2",
     "snowpack": "^3.8.6"
   }
 }
