--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "web-test-runner \"src/**/*.test.js\"",
+    "test:watch": "web-test-runner \"src/**/*.test.js\" --watch"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,10 @@
     "@strictly-lang/compiler": "^1.1.8"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "^4.3.4-fix.0",
+    "@snowpack/web-test-runner-plugin": "^0.2.2",
     "@strictly-lang/snowpack-plugin": "^1.0.2",
+    "@web/test-runner": "^0.13.16",
     "snowpack": "^3.8.6"
   }
 }
