--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     name: Test
-    runs-on: "ubtuntu-latest"
+    runs-on: ubtuntu-latest
 
     steps:
       - name: Check out source code
